# rust-rfc7807

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/problem-details/: Cargo.toml
crates/problem-details-axum/: Cargo.toml
crates/problem-details-axum/src/: api_error.rs  lib.rs  response.rs  tests.rs  trace.rs
crates/problem-details/src/: axum_impl.rs  lib.rs  problem.rs  tests.rs  traits.rs  validation.rs
crates/rust-rfc7807/: Cargo.toml
crates/rust-rfc7807-axum/: Cargo.toml
crates/rust-rfc7807-axum/src/: api_error.rs  lib.rs  tests.rs  trace.rs
crates/rust-rfc7807/src/: lib.rs  problem.rs  tests.rs  traits.rs
examples/axum-api/: Cargo.toml
examples/axum-api/src/: lib.rs  main.rs
examples/axum-api/tests/: integration.rs
