[package]
name = "problem-details-axum"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum integration for RFC 7807 Problem Details"
keywords = ["rfc7807", "problem-details", "axum", "error"]
categories = ["web-programming"]

[dependencies]
problem-details = { path = "../problem-details", version = "0.1.0", features = ["axum"] }
axum = "0.8"
http = "1"
serde_json = "1"

[dependencies.tracing]
version = "0.1"
optional = true

[features]
default = []
tracing = ["dep:tracing"]
