[package]
name = "rust-rfc7807-axum"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum integration for RFC 7807 Problem Details (rust-rfc7807)"
documentation = "https://docs.rs/rust-rfc7807-axum"
readme = "../../README.md"
keywords = ["rfc7807", "problem-details", "axum", "http", "errors"]
categories = ["web-programming", "network-programming"]

[dependencies]
rust-rfc7807 = { version = "0.1.0", path = "../problem-details", features = ["axum"] }
axum-core = "0.5"
http = "1"
serde_json = "1"

[dependencies.tracing]
version = "0.1"
optional = true

[features]
default = []
tracing = ["dep:tracing"]
