[package]
name = "problem-details"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RFC 7807 Problem Details for HTTP APIs — lightweight, safe, ergonomic"
documentation = "https://docs.rs/problem-details"
readme = "../../README.md"
keywords = ["rfc7807", "problem-details", "http", "api", "errors"]
categories = ["web-programming", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-core = { version = "0.5", optional = true }
http = { version = "1", optional = true }

[features]
default = []
axum = ["dep:axum-core", "dep:http"]
