[package]
name = "axum-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "axum_api"
path = "src/lib.rs"

[[bin]]
name = "axum-api"
path = "src/main.rs"

[dependencies]
rust-rfc7807 = { path = "../../crates/rust-rfc7807" }
rust-rfc7807-axum = { path = "../../crates/rust-rfc7807-axum" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
